--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
@@ -2,6 +2,16 @@
 
 @{
     ViewBag.Title = "Edit";
+    List<int> heureValue = new List<int>();
+    for (int i = 8; i <= 18; i++)
+    {
+        heureValue.Add(i);
+    }
+    List<int> minuteValue = new List<int>();
+    for (int i = 0; i < 12; i++)
+    {
+        minuteValue.Add(i * 5);
+    }
 }
 
 <h2>Edit</h2>
@@ -10,7 +20,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Seance</h4>
         <hr />
@@ -38,6 +48,22 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DateSeance, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DateSeance, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.HeureRDV, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("HeureRDV", new SelectList(@heureValue), htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.HeureRDV, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.MinuteRDV, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("MinuteRDV", new SelectList(@minuteValue), htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.MinuteRDV, "", new { @class = "text-danger" })
             </div>
         </div>
 
