--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Details.cshtml
@@ -44,37 +44,7 @@
         </dd>
     </dl>
 
-    <h4>
-        @Html.DisplayName("Seances")
-    </h4>
-
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayName("Date Seance")
-            </th>
-            <th>
-                @Html.DisplayName("Addresse")
-            </th>
-            
-        </tr>
-
-        @foreach (var seance in Model.Seances)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => seance.DateSeance)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => seance.Adresse)
-                </td>
-            </tr>
-
-        }
-
-    </table>
-
-
+    @Html.Partial("_consultationView",Model)
     
 </div>
 <p>
