Add and change color

--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
@@ -38,39 +38,57 @@
     @foreach (var item in Model)
     {
         <tr>
-        @if (item.DateSeance != null)
-        {
-            <text>
-            <tr bgcolor="#95FF95">
-            </text>
-        }
+            @if (item.Statut == "demandée")
+            {
+                <text>
+                <tr bgcolor="#ff893d">
+                </text>
+            }
+            @if (item.Statut == "Confirmée")
+            {
+                <text>
+                <tr bgcolor="#95FF95">
+                </text>
+            }
+            @if (item.Statut == "Reportée")
+            {
+                <text>
+                <tr bgcolor="#ff3d3d">
+                </text>
+            }
+            @if (item.Statut == "Réalisé")
+            {
+                <text>
+                <tr bgcolor="#3d9aff">
+                </text>
+            }
 
-        <td>
-            @Html.DisplayFor(modelItem => item.Agent.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Photographe.Nom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateSeance)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Adresse)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telephone1)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telephone2)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telephone3)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.SeanceID }) |
-            @Html.ActionLink("Details", "Details", new { id = item.SeanceID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.SeanceID }) |
-        </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Agent.Nom)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Photographe.Nom)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DateSeance)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Adresse)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telephone1)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telephone2)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Telephone3)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.SeanceID }) |
+                @Html.ActionLink("Details", "Details", new { id = item.SeanceID }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.SeanceID }) |
+            </td>
         </tr>
     }
 
