Add multiple image

--- a/FedoraPhoto/FedoraPhoto/Views/Photos/Create.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Photos/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.Label("Photo", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" name="imageFile" />
+                <input type="file" name="imageFiles" multiple />
             </div>
         </div>
 
