--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Delete.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Delete.cshtml
@@ -20,11 +20,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Photo.Photo1)
+            @Html.DisplayNameFor(model => model.Photos)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Photo.Photo1)
+            @Html.DisplayFor(model => model.Photos)
         </dd>
 
         <dt>
