--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Delete.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model FedoraPhoto.Models.Agent
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Supprimer";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to Supprimer this?</h3>
 <div>
     <h4>Agent</h4>
     <hr />
@@ -49,7 +49,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Supprimer" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
