--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Create.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Create.cshtml
@@ -56,7 +56,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à la Liste", "Index")
 </div>
 
 @section Scripts {
