--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Delete.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Supprimer</h2>
 
-<h3>Are you sure you want to Supprimer this?</h3>
+<h3>Êtes-vous sûrs de vouloir supprimer ceci?</h3>
 <div>
     <h4>Agent</h4>
     <hr />
@@ -50,7 +50,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Supprimer" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Retour à la Liste", "Index")
         </div>
     }
 </div>
