--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Edit.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Edit.cshtml
@@ -58,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à la Liste", "Index")
 </div>
 
 @section Scripts {
