--- a/FedoraPhoto/FedoraPhoto/Views/Forfaits/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Forfaits/Details.cshtml
@@ -53,6 +53,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ForfaitID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.ForfaitID }) |
+    @Html.ActionLink("Retour à la liste", "Index")
 </p>
