--- a/FedoraPhoto/FedoraPhoto/Views/Forfaits/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Forfaits/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nouveau", "Create")
 </p>
 <table class="table">
     <tr>
@@ -47,9 +47,9 @@
             @Html.DisplayFor(modelItem => item.Temps)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ForfaitID }) |
+            @Html.ActionLink("Modifier", "Edit", new { id=item.ForfaitID }) |
             @Html.ActionLink("Details", "Details", new { id=item.ForfaitID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ForfaitID })
+            @Html.ActionLink("Supprimer", "Delete", new { id=item.ForfaitID })
         </td>
     </tr>
 }
