--- a/FedoraPhoto/FedoraPhoto/Views/Photographes/Delete.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Photographes/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model FedoraPhoto.Models.Photographe
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Supprimer";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûrs de vouloir supprimer ceci?</h3>
 <div>
     <h4>Photographe</h4>
     <hr />
@@ -33,8 +33,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Supprimer" class="btn btn-default" /> |
+            @Html.ActionLink("Retour à la Liste", "Index")
         </div>
     }
 </div>
