Francisation 4: The Final Frontier

--- a/FedoraPhoto/FedoraPhoto/Views/Photographes/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Photographes/Details.cshtml
@@ -29,6 +29,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.PhotographeID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.PhotographeID }) |
+    @Html.ActionLink("Retour à la Liste", "Index")
 </p>
