--- a/FedoraPhoto/FedoraPhoto/Views/Photographes/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Photographes/Index.cshtml
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.Prenom)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PhotographeID }) |
+            @Html.ActionLink("Modifier", "Edit", new { id=item.PhotographeID }) |
             @Html.ActionLink("Details", "Details", new { id=item.PhotographeID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PhotographeID })
+            @Html.ActionLink("Supprimer", "Delete", new { id=item.PhotographeID })
         </td>
     </tr>
 }
