--- a/FedoraPhoto/FedoraPhoto/Views/Photos/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Photos/Index.cshtml
@@ -41,9 +41,9 @@
             @Html.DisplayFor(modelItem => item.PhotoType)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.PhotoID }) |
+            @Html.ActionLink("Modifier", "Edit", new { id=item.PhotoID }) |
             @Html.ActionLink("Details", "Details", new { id=item.PhotoID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.PhotoID })
+            @Html.ActionLink("Supprimer", "Delete", new { id=item.PhotoID })
         </td>
     </tr>
 }
