--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Create.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model FedoraPhoto.Models.Seance
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Créer";
 }
 
-<h2>Create</h2>
+<h2>Créer</h2>
 
 
 @using (Html.BeginForm()) 
@@ -88,7 +88,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Retour à la Liste", "Index")
 </div>
 
 @section Scripts {
