--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Details.cshtml
@@ -100,8 +100,8 @@
 </table>
 
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.SeanceID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.SeanceID }) |
+    @Html.ActionLink("Retour à la Liste", "Index")
 </p>
 
 
