--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
@@ -85,9 +85,9 @@
                 @Html.DisplayFor(modelItem => item.Telephone3)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.SeanceID }) |
+                @Html.ActionLink("Modifier", "Edit", new { id = item.SeanceID }) |
                 @Html.ActionLink("Details", "Details", new { id = item.SeanceID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.SeanceID }) |
+                @Html.ActionLink("Supprimer", "Delete", new { id = item.SeanceID }) |
             </td>
         </tr>
     }
