--- a/FedoraPhoto/FedoraPhoto/Views/Shared/_Layout.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Shared/_Layout.cshtml
@@ -17,13 +17,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nom de l'application", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("FedoraPhoto", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Accueil", "Index", "Home")</li>
                     <li>@Html.ActionLink("À propos de", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Agents", "Index", "Agents")</li>
+                    <li>@Html.ActionLink("Forfaits", "Index", "Forfaits")</li>
+                    <li>@Html.ActionLink("Photographes", "Index", "Photographes")</li>
+                    <li>@Html.ActionLink("Photos", "Index", "Photos")</li>
+                    <li>@Html.ActionLink("Seances", "Index", "Seances")</li>
                 </ul>
             </div>
         </div>
