--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<FedoraPhoto.Models.Seance>
+﻿@model PagedList.IPagedList<FedoraPhoto.Models.Seance>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -9,28 +10,31 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<p>
+    @Html.ActionLink("Trier par Statut", "Index", new { sortOrder = "statut" })
+</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Agent.Nom)
+            Nom Agent
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Photographe.Nom)
+            Nom Photographe
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateSeance)
+            @Html.ActionLink("Date Séance", "Index", new { sortOrder = "date_desc" })
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Adresse)
+            Adresse
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Telephone1)
+            Téléphone 1
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Telephone2)
+            Téléphone 2
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Telephone3)
+            Téléphone 3
         </th>
         <th></th>
     </tr>
@@ -93,3 +97,7 @@
     }
 
 </table>
+<br />
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index", new { page=page, sortOrder = ViewBag.CurrentSort }))
