--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
@@ -115,6 +115,8 @@
             </div>
         </div>
 
+        @Html.HiddenFor(model => model.rowVersionSeance)
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Sauvegarder" class="btn btn-default" />
