--- a/FedoraPhoto/FedoraPhoto/Views/Factures/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Factures/Index.cshtml
@@ -26,6 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.FraisTPS)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Total)
+        </th>
         <th></th>
     </tr>
 
@@ -45,6 +48,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FraisTPS)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Total)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.FactureID }) |
