--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
@@ -115,6 +115,17 @@
             </div>
         </div>
 
+        @if(Model.Factures != null)
+        {
+            <div class="form-group">
+                @Html.LabelFor(model => model.ForfaitID, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.ForfaitID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.ForfaitID, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        }
+
         @Html.HiddenFor(model => model.rowVersionSeance)
 
         <div class="form-group">
