--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Edit.cshtml
@@ -115,12 +115,12 @@
             </div>
         </div>
 
-        @if(Model.Factures != null)
+        @if (Model.Factures != null)
         {
             <div class="form-group">
-                @Html.LabelFor(model => model.ForfaitID, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.ForfaitID, "Forfait", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.ForfaitID, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownList("ForfaitID", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.ForfaitID, "", new { @class = "text-danger" })
                 </div>
             </div>
