--- a/FedoraPhoto/FedoraPhoto/Views/Factures/Delete.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Factures/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Supprimer</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Êtes-vous sûrs de vouloir supprimer ceci?</h3>
 <div>
     <h4>Facture</h4>
     <hr />
