--- a/FedoraPhoto/FedoraPhoto/Views/Forfaits/Create.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Forfaits/Create.cshtml
@@ -12,10 +12,11 @@
     
     <div class="form-horizontal">
         <h4>Forfait</h4>
+        Les champs avec des <span style="color: red">*</span> sont obligatoires
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.NomForfait, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NomForfait, htmlAttributes: new { @class = "control-label col-md-2" }) <span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.NomForfait, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NomForfait, "", new { @class = "text-danger" })
@@ -23,7 +24,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DescriptionForfait, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.DescriptionForfait, htmlAttributes: new { @class = "control-label col-md-2" }) <span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DescriptionForfait, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DescriptionForfait, "", new { @class = "text-danger" })
