--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Create.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Create.cshtml
@@ -13,10 +13,11 @@
     
     <div class="form-horizontal">
         <h4>Seance</h4>
+        Les champs avec des <span style="color: red">*</span> sont obligatoires
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.AgentID, "AgentID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.AgentID, "AgentID", htmlAttributes: new { @class = "control-label col-md-2" })<span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.DropDownList("AgentID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AgentID, "", new { @class = "text-danger" })
@@ -24,7 +25,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.PhotographeID, "PhotographeID", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.PhotographeID, "PhotographeID", htmlAttributes: new { @class = "control-label col-md-2" })<span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.DropDownList("PhotographeID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PhotographeID, "", new { @class = "text-danger" })
@@ -32,7 +33,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Nom, htmlAttributes: new { @class = "control-label col-md-2" })<span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Nom, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Nom, "", new { @class = "text-danger" })
@@ -40,7 +41,7 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Prenom, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Prenom, htmlAttributes: new { @class = "control-label col-md-2" })<span style="color: red">*</span>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Prenom, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Prenom, "", new { @class = "text-danger" })
