--- a/FedoraPhoto/FedoraPhoto/Views/Agents/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Agents/Details.cshtml
@@ -48,6 +48,6 @@
     
 </div>
 <p>
-    @Html.ActionLink("Edit", "Modifier", new { id = Model.AgentID }) |
+    @Html.ActionLink("Modifier", "Edit", new { id = Model.AgentID }) |
     @Html.ActionLink("Retour à la liste", "Index")
 </p>
