Unit of work and shiet

--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Details.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Details.cshtml
@@ -83,7 +83,7 @@
     </dl>
 </div>
 
-@Html.Partial("_GaleriePhotoView", Model);
+@Html.Partial("_GaleriePhotoView", Model)
 
 <p>
     @Html.ActionLink("Modifier", "Edit", new { id = Model.SeanceID }) |
