--- a/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
+++ b/FedoraPhoto/FedoraPhoto/Views/Seances/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Nouveau", "Create")
 </p>
 <p>
     @Html.ActionLink("Trier par Statut", "Index", new { sortOrder = "statut" })
